ending implementation spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 
 # Configuration de la source de data
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bd_flash_cash
 spring.datasource.username=root
 spring.datasource.password=
 
 # Configuration de JPA
+
+
 server.servlet.context-path=
 
